--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="mise en page.css"
 </head>
 <body>
+
+    <p>Blablabla</p>
     
     <h1>Nissan Skyline R34</h1>
 
