--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <p id="chapeau"> La <span class="gris">Nissan Skyline R34</span> est une automobile berline (ou sedan) 4 portes, souvent retenue pour la déclinaison GT-<span class="rouge">R</span> (BNR34) coupé 2 portes sportif haut de gamme.<br>Cette génération de Skyline sortie en 1998 fut commercialisée au Japon uniquement (hormis quelques rares exceptions).</p>
     
+    <p>Nice car ! </p>
+    
     <p> Le modèle sedan le plus performant est la <strong>Nissan Skyline 25 GT-X Turbo</strong> (châssis ER34), sortie en 1998, elle est dotée du moteur RB25DET Neo, un six cylindres en ligne de 280 ch, équipé d'un turbo.
     Elle fut disponible en boite mécanique 5 rapports ou semi-automatique 4 rapports.</p>
 
