--- a/page 3.html
+++ b/page 3.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 2</title>
+    <title>Page 3</title>
     <link rel="stylesheet" href="mise en page.css"
 </head>
 <body>
@@ -20,7 +20,7 @@
 
     </nav>
 
-<h1>Test</h1>
+<h1>Page 3 comming soon</h1>
 
 </body>
 </html>
