--- a/page 2.html
+++ b/page 2.html
@@ -10,17 +10,17 @@
     
  <!-- <p>MENU :</p> -->
    
- <nav>
+<nav>
    
-    <a href="index.html" target="_blank">Page d'acceuil</a>
+    <a href="index.html">Page d'acceuil</a>
     <br>
-    <a href="page 2.html" target="_blank">Page 2</a>
+    <a href="page 2.html">Page 2</a>
     <br>
-    <a href="page 3.html" target="_blank">Page 3</a>
+    <a href="page 3.html">Page 3</a>
 
     </nav>
 
-<h1>Page 2 comming soon</h1>
+    <h1>Page 2 comming soon</h1>
 
 </body>
 </html>
