--- a/page 3.html
+++ b/page 3.html
@@ -12,15 +12,15 @@
    
  <nav>
    
-    <a href="index.html" target="_blank">Page d'acceuil</a>
+    <a href="index.html">Page d'acceuil</a>
     <br>
-    <a href="page 2.html" target="_blank">Page 2</a>
+    <a href="page 2.html">Page 2</a>
     <br>
-    <a href="page 3.html" target="_blank">Page 3</a>
+    <a href="page 3.html">Page 3</a>
 
     </nav>
 
-<h1>Page 3 comming soon</h1>
+    <h1>Page 3 comming soon</h1>
 
 </body>
 </html>
