--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     
     <!-- <p>MENU :</p> -->
    
-<nav>
-   
-    <a href="index.html">Page d'acceuil</a>
-    <br>
-    <a href="page 2.html">Page 2</a>
-    <br>
-    <a href="page 3.html">Page 3</a>
+    <nav>
+    
+        <ul>
+            <li><a href="index.html">Page d'acceuil</a></li>
+            <br>
+            <li><a href="page 2.html">Page 2</a></li>
+            <br>
+            <li><a href="page 3.html">Page 3</a></li>
+        </ul>
 
     </nav>
 
