--- a/index.html
+++ b/index.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon 1er site web</title>
-    <link rel="stylesheet" href="mise en page.css"
+    <link rel="stylesheet" href="mise en page.css">
 </head>
 <body>
     
-    <!-- <p>MENU :</p> -->
+    <header>
+
+        <!-- <p>MENU :</p> -->
    
-    <nav>
+        <nav>
     
-        <ul>
-            <li><a href="index.html">Page d'acceuil</a></li>
-            <br>
-            <li><a href="page 2.html">Page 2</a></li>
-            <br>
-            <li><a href="page 3.html">Page 3</a></li>
-        </ul>
+            <ul>
+                <li><a href="index.html">Page d'acceuil</a></li>
+                <br>
+                <li><a href="page 2.html">Page 2</a></li>
+                <br>
+                <li><a href="page 3.html">Page 3</a></li>
+            </ul>
 
-    </nav>
+        </nav>
 
+        <h1>Nissan Skyline R34</h1>
 
+    </header>
 
-    <h1>Nissan Skyline R34</h1>
     <br>
 
     <p id="chapeau"> La <span class="gris">Nissan Skyline R34</span> est une automobile berline (ou sedan) 4 portes, souvent retenue pour la déclinaison GT-<span class="rouge">R</span> (BNR34) coupé 2 portes sportif haut de gamme.<br>Cette génération de Skyline sortie en 1998 fut commercialisée au Japon uniquement (hormis quelques rares exceptions).</p>
