--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <ul>
                 <li><a href="index.html">Page d'acceuil</a></li>
                 <br>
-                <li><a href="page 2.html">Page 2</a></li>
+                <li><a href="page 2.html"><span class="gris">Page 2</span></a></li>
                 <br>
-                <li><a href="page 3.html">Page 3</a></li>
+                <li><a href="page 3.html"><span class="gris">Page 3</span></a></li>
             </ul>
 
         </nav>
